[package]
name = "webcg"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
wgpu = { version = "22.1.0", features = ["webgl"] }

[dependencies.web-sys]
version = "0.3.72"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlCanvasElement',
    'Node',
    'Window',
]
